--- a/k8s/goserver/service.yaml
+++ b/k8s/goserver/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: goserver-service
 spec:
   type: LoadBalancer
   selector: 
-    app: nginx
+    app: goserver
   ports:
   - port: 80
     targetPort: 80
